// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid> Tests Grid component should show successfully 1`] = `
<Fragment>
  <h3>
    spiderman
  </h3>
  <p
    className="animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
  <hr />
</Fragment>
`;

exports[`<Grid> Tests should show items when images are ready 1`] = `
<Fragment>
  <h3>
    spiderman
  </h3>
  <div
    className="card-grid"
  >
    <GridGifItem
      id="abc"
      key="abc"
      title="title"
      url="https://localhost/test"
    />
  </div>
  <hr />
</Fragment>
`;
